y.output
   0  $accept : program $end

   1  program : statement_list

   2  statement_list : statement_list statement SEMICOLON
   3                 | statement SEMICOLON
   4                 | statement_list COMMENT
   5                 | COMMENT

   6  statement : void_statement
   7            | expression

   8  void_statement : if_statement
   9                 | loop
  10                 | function_def
  11                 | type_def
  12                 | BREAK
  13                 | CONTINUE

  14  if_statement : if_statement else_statement
  15               | IF conditional_expression DO LBRACE statement_list RBRACE

  16  else_statement : ELSE DO LBRACE statement_list RBRACE
  17                 | ELSE IF conditional_expression DO LBRACE statement_list RBRACE

  18  loop : while_loop
  19       | for_loop

  20  while_loop : WHILE LP expression RP DO LBRACE statement_list RBRACE

  21  for_loop : FOR LP assignment_expression SEMICOLON expression SEMICOLON assignment_expression RP DO LBRACE statement_list RBRACE

  22  function_def : DEF VARIABLE LP variable_list RP DO LBRACE statement_list RBRACE

  23  variable_list : VARIABLE COMMA variable_list
  24                | VARIABLE
  25                | EMPTY

  26  type_def : TYPE VARIABLE

  27  expression : conditional_expression
  28             | assignment_expression
  29             | RETURN LP expression RP

  30  conditional_expression : conditional_expression condition_operator low_precedence_arithmetic_expression
  31                         | low_precedence_arithmetic_expression

  32  condition_operator : LESSER
  33                     | LARGER
  34                     | LESSER_EQ
  35                     | LARGER_EQ
  36                     | EQUALS
  37                     | NOT_EQUALS
  38                     | AND
  39                     | OR
  40                     | XOR

  41  assignment_expression : type_def ASSIGNMENT expression
  42                        | VARIABLE ASSIGNMENT expression

  43  low_precedence_arithmetic_expression : low_precedence_arithmetic_expression low_precedence_operator high_precedence_arithmetic_expression
  44                                       | high_precedence_arithmetic_expression

  45  high_precedence_arithmetic_expression : high_precedence_arithmetic_expression high_precedence_operator highest_precedence_arithmetic_expression
  46                                        | highest_precedence_arithmetic_expression

  47  highest_precedence_arithmetic_expression : highest_precedence_operator highest_precedence_arithmetic_expression
  48                                           | LP conditional_expression RP
  49                                           | value

  50  low_precedence_operator : MINUS
  51                          | PLUS

  52  high_precedence_operator : DIVISION
  53                           | MULTIPLICATION
  54                           | MODULUS

  55  highest_precedence_operator : NOT

  56  value : function_call
  57        | VARIABLE
  58        | INTEGER
  59        | FLOAT
  60        | STRING
  61        | BOOLEAN

  62  function_name : VARIABLE
  63                | PRIMITIVE_FUNCTION

  64  function_call : function_name LP expression_list RP

  65  expression_list : expression COMMA expression_list
  66                  | expression
  67                  | EMPTY

  68  EMPTY :

state 0
	$accept : . program $end  (0)

	COMMENT  shift 1
	IF  shift 2
	WHILE  shift 3
	FOR  shift 4
	DEF  shift 5
	VARIABLE  shift 6
	LP  shift 7
	RETURN  shift 8
	TYPE  shift 9
	CONTINUE  shift 10
	BOOLEAN  shift 11
	BREAK  shift 12
	NOT  shift 13
	INTEGER  shift 14
	FLOAT  shift 15
	STRING  shift 16
	PRIMITIVE_FUNCTION  shift 17
	.  error

	program  goto 18
	statement_list  goto 19
	statement  goto 20
	void_statement  goto 21
	expression  goto 22
	if_statement  goto 23
	loop  goto 24
	function_def  goto 25
	type_def  goto 26
	conditional_expression  goto 27
	while_loop  goto 28
	for_loop  goto 29
	assignment_expression  goto 30
	low_precedence_arithmetic_expression  goto 31
	high_precedence_arithmetic_expression  goto 32
	highest_precedence_arithmetic_expression  goto 33
	highest_precedence_operator  goto 34
	value  goto 35
	function_call  goto 36
	function_name  goto 37


state 1
	statement_list : COMMENT .  (5)

	.  reduce 5


state 2
	if_statement : IF . conditional_expression DO LBRACE statement_list RBRACE  (15)

	VARIABLE  shift 38
	LP  shift 7
	BOOLEAN  shift 11
	NOT  shift 13
	INTEGER  shift 14
	FLOAT  shift 15
	STRING  shift 16
	PRIMITIVE_FUNCTION  shift 17
	.  error

	conditional_expression  goto 39
	low_precedence_arithmetic_expression  goto 31
	high_precedence_arithmetic_expression  goto 32
	highest_precedence_arithmetic_expression  goto 33
	highest_precedence_operator  goto 34
	value  goto 35
	function_call  goto 36
	function_name  goto 37


state 3
	while_loop : WHILE . LP expression RP DO LBRACE statement_list RBRACE  (20)

	LP  shift 40
	.  error


state 4
	for_loop : FOR . LP assignment_expression SEMICOLON expression SEMICOLON assignment_expression RP DO LBRACE statement_list RBRACE  (21)

	LP  shift 41
	.  error


state 5
	function_def : DEF . VARIABLE LP variable_list RP DO LBRACE statement_list RBRACE  (22)

	VARIABLE  shift 42
	.  error


state 6
	assignment_expression : VARIABLE . ASSIGNMENT expression  (42)
	value : VARIABLE .  (57)
	function_name : VARIABLE .  (62)

	ASSIGNMENT  shift 43
	SEMICOLON  reduce 57
	LP  reduce 62
	RP  reduce 57
	COMMA  reduce 57
	LESSER  reduce 57
	LARGER  reduce 57
	LESSER_EQ  reduce 57
	LARGER_EQ  reduce 57
	EQUALS  reduce 57
	NOT_EQUALS  reduce 57
	AND  reduce 57
	OR  reduce 57
	XOR  reduce 57
	MINUS  reduce 57
	PLUS  reduce 57
	DIVISION  reduce 57
	MULTIPLICATION  reduce 57
	MODULUS  reduce 57


state 7
	highest_precedence_arithmetic_expression : LP . conditional_expression RP  (48)

	VARIABLE  shift 38
	LP  shift 7
	BOOLEAN  shift 11
	NOT  shift 13
	INTEGER  shift 14
	FLOAT  shift 15
	STRING  shift 16
	PRIMITIVE_FUNCTION  shift 17
	.  error

	conditional_expression  goto 44
	low_precedence_arithmetic_expression  goto 31
	high_precedence_arithmetic_expression  goto 32
	highest_precedence_arithmetic_expression  goto 33
	highest_precedence_operator  goto 34
	value  goto 35
	function_call  goto 36
	function_name  goto 37


state 8
	expression : RETURN . LP expression RP  (29)

	LP  shift 45
	.  error


state 9
	type_def : TYPE . VARIABLE  (26)

	VARIABLE  shift 46
	.  error


state 10
	void_statement : CONTINUE .  (13)

	.  reduce 13


state 11
	value : BOOLEAN .  (61)

	.  reduce 61


state 12
	void_statement : BREAK .  (12)

	.  reduce 12


state 13
	highest_precedence_operator : NOT .  (55)

	.  reduce 55


state 14
	value : INTEGER .  (58)

	.  reduce 58


state 15
	value : FLOAT .  (59)

	.  reduce 59


state 16
	value : STRING .  (60)

	.  reduce 60


state 17
	function_name : PRIMITIVE_FUNCTION .  (63)

	.  reduce 63


state 18
	$accept : program . $end  (0)

	$end  accept


state 19
	program : statement_list .  (1)
	statement_list : statement_list . statement SEMICOLON  (2)
	statement_list : statement_list . COMMENT  (4)

	COMMENT  shift 47
	IF  shift 2
	WHILE  shift 3
	FOR  shift 4
	DEF  shift 5
	VARIABLE  shift 6
	LP  shift 7
	RETURN  shift 8
	TYPE  shift 9
	CONTINUE  shift 10
	BOOLEAN  shift 11
	BREAK  shift 12
	NOT  shift 13
	INTEGER  shift 14
	FLOAT  shift 15
	STRING  shift 16
	PRIMITIVE_FUNCTION  shift 17
	$end  reduce 1

	statement  goto 48
	void_statement  goto 21
	expression  goto 22
	if_statement  goto 23
	loop  goto 24
	function_def  goto 25
	type_def  goto 26
	conditional_expression  goto 27
	while_loop  goto 28
	for_loop  goto 29
	assignment_expression  goto 30
	low_precedence_arithmetic_expression  goto 31
	high_precedence_arithmetic_expression  goto 32
	highest_precedence_arithmetic_expression  goto 33
	highest_precedence_operator  goto 34
	value  goto 35
	function_call  goto 36
	function_name  goto 37


state 20
	statement_list : statement . SEMICOLON  (3)

	SEMICOLON  shift 49
	.  error


state 21
	statement : void_statement .  (6)

	.  reduce 6


state 22
	statement : expression .  (7)

	.  reduce 7


state 23
	void_statement : if_statement .  (8)
	if_statement : if_statement . else_statement  (14)

	ELSE  shift 50
	SEMICOLON  reduce 8

	else_statement  goto 51


state 24
	void_statement : loop .  (9)

	.  reduce 9


state 25
	void_statement : function_def .  (10)

	.  reduce 10


state 26
	void_statement : type_def .  (11)
	assignment_expression : type_def . ASSIGNMENT expression  (41)

	ASSIGNMENT  shift 52
	SEMICOLON  reduce 11


state 27
	expression : conditional_expression .  (27)
	conditional_expression : conditional_expression . condition_operator low_precedence_arithmetic_expression  (30)

	LESSER  shift 53
	LARGER  shift 54
	LESSER_EQ  shift 55
	LARGER_EQ  shift 56
	EQUALS  shift 57
	NOT_EQUALS  shift 58
	AND  shift 59
	OR  shift 60
	XOR  shift 61
	SEMICOLON  reduce 27
	RP  reduce 27
	COMMA  reduce 27

	condition_operator  goto 62


state 28
	loop : while_loop .  (18)

	.  reduce 18


state 29
	loop : for_loop .  (19)

	.  reduce 19


state 30
	expression : assignment_expression .  (28)

	.  reduce 28


state 31
	conditional_expression : low_precedence_arithmetic_expression .  (31)
	low_precedence_arithmetic_expression : low_precedence_arithmetic_expression . low_precedence_operator high_precedence_arithmetic_expression  (43)

	MINUS  shift 63
	PLUS  shift 64
	SEMICOLON  reduce 31
	DO  reduce 31
	RP  reduce 31
	COMMA  reduce 31
	LESSER  reduce 31
	LARGER  reduce 31
	LESSER_EQ  reduce 31
	LARGER_EQ  reduce 31
	EQUALS  reduce 31
	NOT_EQUALS  reduce 31
	AND  reduce 31
	OR  reduce 31
	XOR  reduce 31

	low_precedence_operator  goto 65


state 32
	low_precedence_arithmetic_expression : high_precedence_arithmetic_expression .  (44)
	high_precedence_arithmetic_expression : high_precedence_arithmetic_expression . high_precedence_operator highest_precedence_arithmetic_expression  (45)

	DIVISION  shift 66
	MULTIPLICATION  shift 67
	MODULUS  shift 68
	SEMICOLON  reduce 44
	DO  reduce 44
	RP  reduce 44
	COMMA  reduce 44
	LESSER  reduce 44
	LARGER  reduce 44
	LESSER_EQ  reduce 44
	LARGER_EQ  reduce 44
	EQUALS  reduce 44
	NOT_EQUALS  reduce 44
	AND  reduce 44
	OR  reduce 44
	XOR  reduce 44
	MINUS  reduce 44
	PLUS  reduce 44

	high_precedence_operator  goto 69


state 33
	high_precedence_arithmetic_expression : highest_precedence_arithmetic_expression .  (46)

	.  reduce 46


state 34
	highest_precedence_arithmetic_expression : highest_precedence_operator . highest_precedence_arithmetic_expression  (47)

	VARIABLE  shift 38
	LP  shift 7
	BOOLEAN  shift 11
	NOT  shift 13
	INTEGER  shift 14
	FLOAT  shift 15
	STRING  shift 16
	PRIMITIVE_FUNCTION  shift 17
	.  error

	highest_precedence_arithmetic_expression  goto 70
	highest_precedence_operator  goto 34
	value  goto 35
	function_call  goto 36
	function_name  goto 37


state 35
	highest_precedence_arithmetic_expression : value .  (49)

	.  reduce 49


state 36
	value : function_call .  (56)

	.  reduce 56


state 37
	function_call : function_name . LP expression_list RP  (64)

	LP  shift 71
	.  error


state 38
	value : VARIABLE .  (57)
	function_name : VARIABLE .  (62)

	SEMICOLON  reduce 57
	DO  reduce 57
	LP  reduce 62
	RP  reduce 57
	COMMA  reduce 57
	LESSER  reduce 57
	LARGER  reduce 57
	LESSER_EQ  reduce 57
	LARGER_EQ  reduce 57
	EQUALS  reduce 57
	NOT_EQUALS  reduce 57
	AND  reduce 57
	OR  reduce 57
	XOR  reduce 57
	MINUS  reduce 57
	PLUS  reduce 57
	DIVISION  reduce 57
	MULTIPLICATION  reduce 57
	MODULUS  reduce 57


state 39
	if_statement : IF conditional_expression . DO LBRACE statement_list RBRACE  (15)
	conditional_expression : conditional_expression . condition_operator low_precedence_arithmetic_expression  (30)

	DO  shift 72
	LESSER  shift 53
	LARGER  shift 54
	LESSER_EQ  shift 55
	LARGER_EQ  shift 56
	EQUALS  shift 57
	NOT_EQUALS  shift 58
	AND  shift 59
	OR  shift 60
	XOR  shift 61
	.  error

	condition_operator  goto 62


state 40
	while_loop : WHILE LP . expression RP DO LBRACE statement_list RBRACE  (20)

	VARIABLE  shift 6
	LP  shift 7
	RETURN  shift 8
	TYPE  shift 9
	BOOLEAN  shift 11
	NOT  shift 13
	INTEGER  shift 14
	FLOAT  shift 15
	STRING  shift 16
	PRIMITIVE_FUNCTION  shift 17
	.  error

	expression  goto 73
	type_def  goto 74
	conditional_expression  goto 27
	assignment_expression  goto 30
	low_precedence_arithmetic_expression  goto 31
	high_precedence_arithmetic_expression  goto 32
	highest_precedence_arithmetic_expression  goto 33
	highest_precedence_operator  goto 34
	value  goto 35
	function_call  goto 36
	function_name  goto 37


state 41
	for_loop : FOR LP . assignment_expression SEMICOLON expression SEMICOLON assignment_expression RP DO LBRACE statement_list RBRACE  (21)

	VARIABLE  shift 75
	TYPE  shift 9
	.  error

	type_def  goto 74
	assignment_expression  goto 76


state 42
	function_def : DEF VARIABLE . LP variable_list RP DO LBRACE statement_list RBRACE  (22)

	LP  shift 77
	.  error


state 43
	assignment_expression : VARIABLE ASSIGNMENT . expression  (42)

	VARIABLE  shift 6
	LP  shift 7
	RETURN  shift 8
	TYPE  shift 9
	BOOLEAN  shift 11
	NOT  shift 13
	INTEGER  shift 14
	FLOAT  shift 15
	STRING  shift 16
	PRIMITIVE_FUNCTION  shift 17
	.  error

	expression  goto 78
	type_def  goto 74
	conditional_expression  goto 27
	assignment_expression  goto 30
	low_precedence_arithmetic_expression  goto 31
	high_precedence_arithmetic_expression  goto 32
	highest_precedence_arithmetic_expression  goto 33
	highest_precedence_operator  goto 34
	value  goto 35
	function_call  goto 36
	function_name  goto 37


state 44
	conditional_expression : conditional_expression . condition_operator low_precedence_arithmetic_expression  (30)
	highest_precedence_arithmetic_expression : LP conditional_expression . RP  (48)

	RP  shift 79
	LESSER  shift 53
	LARGER  shift 54
	LESSER_EQ  shift 55
	LARGER_EQ  shift 56
	EQUALS  shift 57
	NOT_EQUALS  shift 58
	AND  shift 59
	OR  shift 60
	XOR  shift 61
	.  error

	condition_operator  goto 62


state 45
	expression : RETURN LP . expression RP  (29)

	VARIABLE  shift 6
	LP  shift 7
	RETURN  shift 8
	TYPE  shift 9
	BOOLEAN  shift 11
	NOT  shift 13
	INTEGER  shift 14
	FLOAT  shift 15
	STRING  shift 16
	PRIMITIVE_FUNCTION  shift 17
	.  error

	expression  goto 80
	type_def  goto 74
	conditional_expression  goto 27
	assignment_expression  goto 30
	low_precedence_arithmetic_expression  goto 31
	high_precedence_arithmetic_expression  goto 32
	highest_precedence_arithmetic_expression  goto 33
	highest_precedence_operator  goto 34
	value  goto 35
	function_call  goto 36
	function_name  goto 37


state 46
	type_def : TYPE VARIABLE .  (26)

	.  reduce 26


state 47
	statement_list : statement_list COMMENT .  (4)

	.  reduce 4


state 48
	statement_list : statement_list statement . SEMICOLON  (2)

	SEMICOLON  shift 81
	.  error


state 49
	statement_list : statement SEMICOLON .  (3)

	.  reduce 3


state 50
	else_statement : ELSE . DO LBRACE statement_list RBRACE  (16)
	else_statement : ELSE . IF conditional_expression DO LBRACE statement_list RBRACE  (17)

	IF  shift 82
	DO  shift 83
	.  error


state 51
	if_statement : if_statement else_statement .  (14)

	.  reduce 14


state 52
	assignment_expression : type_def ASSIGNMENT . expression  (41)

	VARIABLE  shift 6
	LP  shift 7
	RETURN  shift 8
	TYPE  shift 9
	BOOLEAN  shift 11
	NOT  shift 13
	INTEGER  shift 14
	FLOAT  shift 15
	STRING  shift 16
	PRIMITIVE_FUNCTION  shift 17
	.  error

	expression  goto 84
	type_def  goto 74
	conditional_expression  goto 27
	assignment_expression  goto 30
	low_precedence_arithmetic_expression  goto 31
	high_precedence_arithmetic_expression  goto 32
	highest_precedence_arithmetic_expression  goto 33
	highest_precedence_operator  goto 34
	value  goto 35
	function_call  goto 36
	function_name  goto 37


state 53
	condition_operator : LESSER .  (32)

	.  reduce 32


state 54
	condition_operator : LARGER .  (33)

	.  reduce 33


state 55
	condition_operator : LESSER_EQ .  (34)

	.  reduce 34


state 56
	condition_operator : LARGER_EQ .  (35)

	.  reduce 35


state 57
	condition_operator : EQUALS .  (36)

	.  reduce 36


state 58
	condition_operator : NOT_EQUALS .  (37)

	.  reduce 37


state 59
	condition_operator : AND .  (38)

	.  reduce 38


state 60
	condition_operator : OR .  (39)

	.  reduce 39


state 61
	condition_operator : XOR .  (40)

	.  reduce 40


state 62
	conditional_expression : conditional_expression condition_operator . low_precedence_arithmetic_expression  (30)

	VARIABLE  shift 38
	LP  shift 7
	BOOLEAN  shift 11
	NOT  shift 13
	INTEGER  shift 14
	FLOAT  shift 15
	STRING  shift 16
	PRIMITIVE_FUNCTION  shift 17
	.  error

	low_precedence_arithmetic_expression  goto 85
	high_precedence_arithmetic_expression  goto 32
	highest_precedence_arithmetic_expression  goto 33
	highest_precedence_operator  goto 34
	value  goto 35
	function_call  goto 36
	function_name  goto 37


state 63
	low_precedence_operator : MINUS .  (50)

	.  reduce 50


state 64
	low_precedence_operator : PLUS .  (51)

	.  reduce 51


state 65
	low_precedence_arithmetic_expression : low_precedence_arithmetic_expression low_precedence_operator . high_precedence_arithmetic_expression  (43)

	VARIABLE  shift 38
	LP  shift 7
	BOOLEAN  shift 11
	NOT  shift 13
	INTEGER  shift 14
	FLOAT  shift 15
	STRING  shift 16
	PRIMITIVE_FUNCTION  shift 17
	.  error

	high_precedence_arithmetic_expression  goto 86
	highest_precedence_arithmetic_expression  goto 33
	highest_precedence_operator  goto 34
	value  goto 35
	function_call  goto 36
	function_name  goto 37


state 66
	high_precedence_operator : DIVISION .  (52)

	.  reduce 52


state 67
	high_precedence_operator : MULTIPLICATION .  (53)

	.  reduce 53


state 68
	high_precedence_operator : MODULUS .  (54)

	.  reduce 54


state 69
	high_precedence_arithmetic_expression : high_precedence_arithmetic_expression high_precedence_operator . highest_precedence_arithmetic_expression  (45)

	VARIABLE  shift 38
	LP  shift 7
	BOOLEAN  shift 11
	NOT  shift 13
	INTEGER  shift 14
	FLOAT  shift 15
	STRING  shift 16
	PRIMITIVE_FUNCTION  shift 17
	.  error

	highest_precedence_arithmetic_expression  goto 87
	highest_precedence_operator  goto 34
	value  goto 35
	function_call  goto 36
	function_name  goto 37


state 70
	highest_precedence_arithmetic_expression : highest_precedence_operator highest_precedence_arithmetic_expression .  (47)

	.  reduce 47


state 71
	function_call : function_name LP . expression_list RP  (64)
	EMPTY : .  (68)

	VARIABLE  shift 6
	LP  shift 7
	RETURN  shift 8
	TYPE  shift 9
	BOOLEAN  shift 11
	NOT  shift 13
	INTEGER  shift 14
	FLOAT  shift 15
	STRING  shift 16
	PRIMITIVE_FUNCTION  shift 17
	RP  reduce 68

	expression  goto 88
	type_def  goto 74
	conditional_expression  goto 27
	assignment_expression  goto 30
	EMPTY  goto 89
	low_precedence_arithmetic_expression  goto 31
	high_precedence_arithmetic_expression  goto 32
	highest_precedence_arithmetic_expression  goto 33
	highest_precedence_operator  goto 34
	value  goto 35
	function_call  goto 36
	function_name  goto 37
	expression_list  goto 90


state 72
	if_statement : IF conditional_expression DO . LBRACE statement_list RBRACE  (15)

	LBRACE  shift 91
	.  error


state 73
	while_loop : WHILE LP expression . RP DO LBRACE statement_list RBRACE  (20)

	RP  shift 92
	.  error


state 74
	assignment_expression : type_def . ASSIGNMENT expression  (41)

	ASSIGNMENT  shift 52
	.  error


state 75
	assignment_expression : VARIABLE . ASSIGNMENT expression  (42)

	ASSIGNMENT  shift 43
	.  error


state 76
	for_loop : FOR LP assignment_expression . SEMICOLON expression SEMICOLON assignment_expression RP DO LBRACE statement_list RBRACE  (21)

	SEMICOLON  shift 93
	.  error


state 77
	function_def : DEF VARIABLE LP . variable_list RP DO LBRACE statement_list RBRACE  (22)
	EMPTY : .  (68)

	VARIABLE  shift 94
	RP  reduce 68

	variable_list  goto 95
	EMPTY  goto 96


state 78
	assignment_expression : VARIABLE ASSIGNMENT expression .  (42)

	.  reduce 42


state 79
	highest_precedence_arithmetic_expression : LP conditional_expression RP .  (48)

	.  reduce 48


state 80
	expression : RETURN LP expression . RP  (29)

	RP  shift 97
	.  error


state 81
	statement_list : statement_list statement SEMICOLON .  (2)

	.  reduce 2


state 82
	else_statement : ELSE IF . conditional_expression DO LBRACE statement_list RBRACE  (17)

	VARIABLE  shift 38
	LP  shift 7
	BOOLEAN  shift 11
	NOT  shift 13
	INTEGER  shift 14
	FLOAT  shift 15
	STRING  shift 16
	PRIMITIVE_FUNCTION  shift 17
	.  error

	conditional_expression  goto 98
	low_precedence_arithmetic_expression  goto 31
	high_precedence_arithmetic_expression  goto 32
	highest_precedence_arithmetic_expression  goto 33
	highest_precedence_operator  goto 34
	value  goto 35
	function_call  goto 36
	function_name  goto 37


state 83
	else_statement : ELSE DO . LBRACE statement_list RBRACE  (16)

	LBRACE  shift 99
	.  error


state 84
	assignment_expression : type_def ASSIGNMENT expression .  (41)

	.  reduce 41


state 85
	conditional_expression : conditional_expression condition_operator low_precedence_arithmetic_expression .  (30)
	low_precedence_arithmetic_expression : low_precedence_arithmetic_expression . low_precedence_operator high_precedence_arithmetic_expression  (43)

	MINUS  shift 63
	PLUS  shift 64
	SEMICOLON  reduce 30
	DO  reduce 30
	RP  reduce 30
	COMMA  reduce 30
	LESSER  reduce 30
	LARGER  reduce 30
	LESSER_EQ  reduce 30
	LARGER_EQ  reduce 30
	EQUALS  reduce 30
	NOT_EQUALS  reduce 30
	AND  reduce 30
	OR  reduce 30
	XOR  reduce 30

	low_precedence_operator  goto 65


state 86
	low_precedence_arithmetic_expression : low_precedence_arithmetic_expression low_precedence_operator high_precedence_arithmetic_expression .  (43)
	high_precedence_arithmetic_expression : high_precedence_arithmetic_expression . high_precedence_operator highest_precedence_arithmetic_expression  (45)

	DIVISION  shift 66
	MULTIPLICATION  shift 67
	MODULUS  shift 68
	SEMICOLON  reduce 43
	DO  reduce 43
	RP  reduce 43
	COMMA  reduce 43
	LESSER  reduce 43
	LARGER  reduce 43
	LESSER_EQ  reduce 43
	LARGER_EQ  reduce 43
	EQUALS  reduce 43
	NOT_EQUALS  reduce 43
	AND  reduce 43
	OR  reduce 43
	XOR  reduce 43
	MINUS  reduce 43
	PLUS  reduce 43

	high_precedence_operator  goto 69


state 87
	high_precedence_arithmetic_expression : high_precedence_arithmetic_expression high_precedence_operator highest_precedence_arithmetic_expression .  (45)

	.  reduce 45


state 88
	expression_list : expression . COMMA expression_list  (65)
	expression_list : expression .  (66)

	COMMA  shift 100
	RP  reduce 66


state 89
	expression_list : EMPTY .  (67)

	.  reduce 67


state 90
	function_call : function_name LP expression_list . RP  (64)

	RP  shift 101
	.  error


state 91
	if_statement : IF conditional_expression DO LBRACE . statement_list RBRACE  (15)

	COMMENT  shift 1
	IF  shift 2
	WHILE  shift 3
	FOR  shift 4
	DEF  shift 5
	VARIABLE  shift 6
	LP  shift 7
	RETURN  shift 8
	TYPE  shift 9
	CONTINUE  shift 10
	BOOLEAN  shift 11
	BREAK  shift 12
	NOT  shift 13
	INTEGER  shift 14
	FLOAT  shift 15
	STRING  shift 16
	PRIMITIVE_FUNCTION  shift 17
	.  error

	statement_list  goto 102
	statement  goto 20
	void_statement  goto 21
	expression  goto 22
	if_statement  goto 23
	loop  goto 24
	function_def  goto 25
	type_def  goto 26
	conditional_expression  goto 27
	while_loop  goto 28
	for_loop  goto 29
	assignment_expression  goto 30
	low_precedence_arithmetic_expression  goto 31
	high_precedence_arithmetic_expression  goto 32
	highest_precedence_arithmetic_expression  goto 33
	highest_precedence_operator  goto 34
	value  goto 35
	function_call  goto 36
	function_name  goto 37


state 92
	while_loop : WHILE LP expression RP . DO LBRACE statement_list RBRACE  (20)

	DO  shift 103
	.  error


state 93
	for_loop : FOR LP assignment_expression SEMICOLON . expression SEMICOLON assignment_expression RP DO LBRACE statement_list RBRACE  (21)

	VARIABLE  shift 6
	LP  shift 7
	RETURN  shift 8
	TYPE  shift 9
	BOOLEAN  shift 11
	NOT  shift 13
	INTEGER  shift 14
	FLOAT  shift 15
	STRING  shift 16
	PRIMITIVE_FUNCTION  shift 17
	.  error

	expression  goto 104
	type_def  goto 74
	conditional_expression  goto 27
	assignment_expression  goto 30
	low_precedence_arithmetic_expression  goto 31
	high_precedence_arithmetic_expression  goto 32
	highest_precedence_arithmetic_expression  goto 33
	highest_precedence_operator  goto 34
	value  goto 35
	function_call  goto 36
	function_name  goto 37


state 94
	variable_list : VARIABLE . COMMA variable_list  (23)
	variable_list : VARIABLE .  (24)

	COMMA  shift 105
	RP  reduce 24


state 95
	function_def : DEF VARIABLE LP variable_list . RP DO LBRACE statement_list RBRACE  (22)

	RP  shift 106
	.  error


state 96
	variable_list : EMPTY .  (25)

	.  reduce 25


state 97
	expression : RETURN LP expression RP .  (29)

	.  reduce 29


state 98
	else_statement : ELSE IF conditional_expression . DO LBRACE statement_list RBRACE  (17)
	conditional_expression : conditional_expression . condition_operator low_precedence_arithmetic_expression  (30)

	DO  shift 107
	LESSER  shift 53
	LARGER  shift 54
	LESSER_EQ  shift 55
	LARGER_EQ  shift 56
	EQUALS  shift 57
	NOT_EQUALS  shift 58
	AND  shift 59
	OR  shift 60
	XOR  shift 61
	.  error

	condition_operator  goto 62


state 99
	else_statement : ELSE DO LBRACE . statement_list RBRACE  (16)

	COMMENT  shift 1
	IF  shift 2
	WHILE  shift 3
	FOR  shift 4
	DEF  shift 5
	VARIABLE  shift 6
	LP  shift 7
	RETURN  shift 8
	TYPE  shift 9
	CONTINUE  shift 10
	BOOLEAN  shift 11
	BREAK  shift 12
	NOT  shift 13
	INTEGER  shift 14
	FLOAT  shift 15
	STRING  shift 16
	PRIMITIVE_FUNCTION  shift 17
	.  error

	statement_list  goto 108
	statement  goto 20
	void_statement  goto 21
	expression  goto 22
	if_statement  goto 23
	loop  goto 24
	function_def  goto 25
	type_def  goto 26
	conditional_expression  goto 27
	while_loop  goto 28
	for_loop  goto 29
	assignment_expression  goto 30
	low_precedence_arithmetic_expression  goto 31
	high_precedence_arithmetic_expression  goto 32
	highest_precedence_arithmetic_expression  goto 33
	highest_precedence_operator  goto 34
	value  goto 35
	function_call  goto 36
	function_name  goto 37


state 100
	expression_list : expression COMMA . expression_list  (65)
	EMPTY : .  (68)

	VARIABLE  shift 6
	LP  shift 7
	RETURN  shift 8
	TYPE  shift 9
	BOOLEAN  shift 11
	NOT  shift 13
	INTEGER  shift 14
	FLOAT  shift 15
	STRING  shift 16
	PRIMITIVE_FUNCTION  shift 17
	RP  reduce 68

	expression  goto 88
	type_def  goto 74
	conditional_expression  goto 27
	assignment_expression  goto 30
	EMPTY  goto 89
	low_precedence_arithmetic_expression  goto 31
	high_precedence_arithmetic_expression  goto 32
	highest_precedence_arithmetic_expression  goto 33
	highest_precedence_operator  goto 34
	value  goto 35
	function_call  goto 36
	function_name  goto 37
	expression_list  goto 109


state 101
	function_call : function_name LP expression_list RP .  (64)

	.  reduce 64

